improved fetch-wrapper.js by expanding instance methods

--- a/src/index.html
+++ b/src/index.html
@@ -151,6 +151,6 @@
       &copy;
       <a href="./pages/about.html" target="_blank">Chris Vander Linden</a>
     </footer>
-    <script src="./js/index.js" type="module"></script>
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
