converted scss folder names from partials to scss

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="text/css" href="./style.scss" />
+    <link rel="stylesheet" type="text/css" href="./main.scss" />
     <title>Weather App</title>
   </head>
   <body>
@@ -151,10 +151,7 @@
       <!-- lanscape background end -->
     </div>
     <!-- main content end -->
-    <footer>
-      &copy;
-      <a href="./pages/about.html" target="_blank">Chris Vander Linden</a>
-    </footer>
+    <footer>&copy; Chris Vander Linden</footer>
     <script src="./index.js" type="module"></script>
   </body>
 </html>
